--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -28,5 +28,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run tests
-        run: |
-          make tests
+        run:  make tests
+
+      - name: Upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
