--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -31,5 +31,5 @@ jobs:
         run:  make tests
 
       - name: Upload coverage to Codecov
-        if: ${{ matrix.os == ubuntu-latest }}
+        if: matrix.os == 'ubuntu-latest'
         run: bash <(curl -s https://codecov.io/bash)
